--- a/static/level1.html
+++ b/static/level1.html
@@ -34,9 +34,9 @@
 
       <div class="collapse navbar-collapse">
           <ul class="navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="/static/assignment.html">Assignment Spec</a></li>
+                <li class="nav-item"><a class="nav-link" href="/static/home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/static/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="/static/assignment.html">Assignment Spec</a></li>
           </ul>
       </div><!--/.nav-collapse -->
   </div>
